update index file

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -6,6 +6,7 @@
     <!-- @@include('../sections/_table.html') -->
     <!-- @@include('../sections/_testimonials.html') -->
     <!-- @@include('../sections/_blog.html') -->
+     <h1>Hellow World</h1>
 </main>
 
 @@include('../layout/_footer.html')
