--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -6,7 +6,9 @@
     <!-- @@include('../sections/_table.html') -->
     <!-- @@include('../sections/_testimonials.html') -->
     <!-- @@include('../sections/_blog.html') -->
-     <h1>Hellow World</h1>
+    <div class="container">
+        <h1>Hellow World</h1>
+    </div>
 </main>
 
 @@include('../layout/_footer.html')
