--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -8,6 +8,7 @@
     <!-- @@include('../sections/_blog.html') -->
     <div class="container">
         <h1>Hellow World</h1>
+        <h1>Hellow World</h1>
     </div>
 </main>
 
