--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -6,9 +6,14 @@
     <!-- @@include('../sections/_table.html') -->
     <!-- @@include('../sections/_testimonials.html') -->
     <!-- @@include('../sections/_blog.html') -->
-    <div class="container">
-        <h1>Hellow World</h1>
-    </div>
+    <section class="text-section py-120">
+        <div class="container">
+            <h1>Hellow World</h1>
+            <button class="button">
+                Gradient Button
+            </button>
+        </div>
+    </section>
 </main>
 
 @@include('../layout/_footer.html')
