--- a/src/index.html
+++ b/src/index.html
@@ -143,9 +143,9 @@
     <section class="text-section py-120">
         <div class="container">
             <h1>Hellow World</h1>
-            <button class="button">
+            <!-- <button class="button">
                 Gradient Button
-            </button>
+            </button> -->
         </div>
     </section>
 </main>
